<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_specialisations"
            android:icon="@drawable/ic_view_more"
            android:title="@string/menu_specialisations" />
        <item
            android:id="@+id/nav_doctors"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_doctors" />
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_bookmarked"
            android:title="@string/menu_bookings" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
</menu>