<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_specialisations">

    <fragment
        android:id="@+id/nav_specialisations"
        android:name="com.project.doctorinsta.ui.specialisation.SpecialisationFragment"
        android:label="@string/menu_specialisations"
        tools:layout="@layout/fragment_specialisation" />

    <fragment
        android:id="@+id/nav_doctors"
        android:name="com.project.doctorinsta.ui.doctors.DoctorsFragment"
        android:label="@string/menu_doctors"
        tools:layout="@layout/fragment_doctors" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.project.doctorinsta.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_bookings"
        android:name="com.project.doctorinsta.ui.booking.MyBookingsFragment"
        android:label="@string/menu_bookings"
        tools:layout="@layout/fragment_patient_bookings" />
</navigation>