<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/doctor_navigation"
    app:startDestination="@+id/nav_bookings">

    <fragment
        android:id="@+id/nav_bookings"
        android:name="com.project.doctorinsta.doctor_ui.bookings.BookingsFragment"
        android:label="@string/bookings"
        tools:layout="@layout/fragment_bookings" />

    <fragment
        android:id="@+id/nav_schedules"
        android:name="com.project.doctorinsta.doctor_ui.schedules.SchedulesFragment"
        android:label="@string/menu_schedules"
        tools:layout="@layout/fragment_schedules" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.project.doctorinsta.common_ui.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>