<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="45dp"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/profileImageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/nav_header_desc"
                        android:paddingTop="@dimen/nav_header_vertical_spacing"
                        app:srcCompat="@drawable/profile" />

                    <TextView
                        android:id="@+id/fullNameTextView"
                        style="@style/viewParent.headerText"
                        android:text=""
                        android:textSize="18sp"
                        android:layout_toRightOf="@+id/profileImageView"
                        android:paddingLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:id="@+id/emailAddressTextView"
                        style="@style/viewParent.headerText"
                        android:layout_below="@id/fullNameTextView"
                        android:layout_toRightOf="@+id/profileImageView"
                        android:layout_centerHorizontal="true"
                        android:paddingLeft="8dp"
                        android:layout_marginTop="-1dp"
                        android:text=""
                        android:textColor="#5D5C5C"
                        android:textSize="16sp" />

                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.01dp"
                    android:background="#37000000"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"/>

                <TextView
                    style="@style/viewParent.headerText.settingsMiniTitle"
                    android:text="@string/account"/>


                <TextView
                    android:id="@+id/editProfileTextView"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:layout_marginTop="10dp"
                    android:text="@string/edit_profile"
                    app:drawableLeftCompat="@drawable/ic_person" />

                <TextView
                    android:id="@+id/changePasswordTextView"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:layout_marginTop="10dp"
                    android:text="@string/change_password"
                    app:drawableLeftCompat="@drawable/ic_lock" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.01dp"
                    android:background="#37000000"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"/>

                <TextView
                    style="@style/viewParent.headerText.settingsMiniTitle"
                    android:text="@string/notifications"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/notificationsSwitch"
                    style="@style/settingsText"
                    android:checked="true"
                    android:drawableLeft="@drawable/ic_notifications_black_24dp"
                    android:drawableStart="@drawable/ic_notifications_black_24dp"
                    android:text="@string/notifications" />

                <TextView
                    android:id="@+id/inboxTextView"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:layout_marginTop="10dp"
                    android:text="@string/messages"
                    app:drawableLeftCompat="@drawable/ic_email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.01dp"
                    android:background="#37000000"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"/>

                <TextView
                    style="@style/viewParent.headerText.settingsMiniTitle"
                    android:text="@string/terms_and_support"/>

                <TextView
                    android:id="@+id/termsAndConditionsTextView"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:layout_marginTop="10dp"
                    android:text="@string/terms_and_conditions"
                    app:drawableLeftCompat="@drawable/ic_bookmarked" />

                <TextView
                    android:id="@+id/supportTextView"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:layout_marginTop="10dp"
                    android:text="@string/get_support"
                    app:drawableLeftCompat="@drawable/ic_email" />

                <TextView
                    android:id="@+id/logoutTextView"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:layout_marginTop="10dp"
                    android:text="@string/logout"
                    app:drawableLeftCompat="@drawable/ic_logout" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.01dp"
                    android:background="#37000000"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"/>
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>